# UEPLUGIN

./: .editorconfig  .gitignore  .phase2-wave0-commits.sh  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
TestProject/Plugins/NYRA/Source/NyraHost/: assets-manifest.json  pyproject.toml
TestProject/Plugins/NYRA/Source/NyraHost/data/ue5-seed-corpus/: actors.md  behavior-trees.md  blueprints.md  lighting.md  materials.md  performance.md  python-api.md  sequencer.md  ue5-seed-index.json
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/: __init__.py  __main__.py  app.py  attachments.py  audit.py  bootstrap.py  chat_export.py  config.py  console.py  cost_forecaster.py  cpp_authoring_state.py  custom_instructions.py  encrypted_memory.py  handshake.py  health.py  i18n_catalog.py  jsonrpc.py  log_tail.py  logging_setup.py  marketplace.py  mcp_installer.py  model_preference.py  multiplayer.py  privacy_guard.py  recovery.py  reproducibility.py  router.py  safe_mode.py  server.py  session.py  snapshot.py  storage.py  transaction.py  user_tools.py  warm_pool.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/backends/: __init__.py  base.py  byok.py  claude.py  claude_mcp_config.py  claude_stream.py  gemma.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/canary/: __init__.py  demo01_canary.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/downloader/: __init__.py  gemma.py  progress.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/extractors/: __init__.py  _common.py  docx.py  html.py  md.py  pdf.py  pptx.py  xlsx.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/handlers/: __init__.py  agent_trace.py  chat.py  composer.py  cost.py  download.py  encrypted_memory.py  health.py  instructions.py  mcp_install.py  model_settings.py  reproducibility.py  session_mode.py  sessions.py  settings_aggregator.py  threads.py  todos.py  transaction.py  user_tools.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/infer/: __init__.py  gpu_probe.py  llama_server.py  ollama_probe.py  router.py  sse.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/knowledge/: __init__.py  index.py  source_ingest.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/mcp_server/: __init__.py
TestProject/Plugins/NYRA/Source/NyraHost/src/nyrahost/tools/: actor_tools.py  animbp_tools.py  assembly_tools.py  asset_fallback_chain.py  asset_hygiene.py  asset_pool.py  asset_search.py  audio_gen.py  base.py  blockout_primitives.py  blockout_validation.py  blueprint_debug.py  blueprint_review.py  blueprint_review_llm.py  blueprint_tools.py  bt_tools.py  character_replace.py  cinematic.py  comfyui_tools.py  computer_use_tools.py  cpp_authoring_tools.py  crash_rca.py  demo02_cli_tool.py  demo02_orchestrator.py  doc_from_code.py  fab_search.py  ffmpeg_extractor.py  headless_ue.py  inpaint_tools.py  kb_search.py  level_design_tools.py  lighting_tools.py  localization.py  material_tools.py  meshy_tools.py  (+19 more)
TestProject/Plugins/NYRA/Source/NyraHost/tests/: README.md  conftest.py  test_animbp_authoring.py  test_app_rpc_routing.py  test_assembly_tools.py  test_asset_fallback_chain.py  test_asset_pool.py  test_attachments.py  test_auth.py  test_backend_interface.py  test_bootstrap.py  test_bt_tools.py  test_chat_export.py  test_chat_instructions_wiring.py  test_claude_backend.py  test_claude_mcp_config.py  test_claude_stream.py  test_comfyui_client.py  test_comfyui_tools.py  test_composer.py  test_computer_use.py  test_computer_use_backend.py  test_console_whitelist.py  test_cpp_authoring.py  test_cpp_authoring_state.py  test_cpp_error_patterns.py  test_cpp_recompile_mock.py  test_custom_instructions.py  test_demo01_canary.py  test_demo02_cli_tool.py  test_demo02_cold_start.py  test_extractors_docx.py  test_extractors_others.py  test_extractors_pdf.py  test_gemma_backend_adapter.py  test_gemma_download.py  test_handshake.py  test_headless_ue.py  test_infer_spawn.py  test_inpaint_tools.py  (+39 more)
TestProject/Plugins/NYRA/Source/NyraHost/tests/fixtures/: sample_compile_error.txt  stream-json-api-retry-auth-failed.ndjson  stream-json-api-retry-rate-limit.ndjson  stream-json-init.ndjson  stream-json-text-turn.ndjson  stream-json-tool-use-turn.ndjson
(+370 files in other folders)
