# NyraHost — Python MCP sidecar for the NYRA Unreal Engine plugin.
#
# This descriptor is used ONLY by developer tooling (pytest, black, ruff, mypy)
# running against the developer's system Python 3.12+. It is NOT consumed by the
# shipped plugin — runtime Python deps live in requirements.lock (Plan 06 adds
# that file and the wheel cache under Binaries/Win64/NyraHost/wheels/).
#
# Per CONTEXT.md:
#   D-13 — Plugin bundles astral-sh python-build-standalone CPython 3.12 Windows x64
#   D-14 — Runtime uses a pre-resolved wheel cache; tests use system Python instead
#   D-15 — Phase 1 deps: mcp, websockets, httpx, pydantic, structlog (not declared here)
#
# Sources (fetched 2026-04-21 via Context7 /pytest-dev/pytest-asyncio):
#   pytest-asyncio 'auto' mode pyproject.toml canonical shape confirmed.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nyrahost"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "structlog>=24.1",
    "pywin32; sys_platform == 'win32'",
    # Phase 8 PARITY-01: document attachment parsers (LOCKED-06 amended).
    # Pure-Python parsers; transitive C-extensions (lxml, Pillow) accepted
    # because both ship pre-built Windows-x64 wheels (no source-build burden
    # on the offline cache). Wheel-cache budget: <75 MB total
    # (T-08-02 fail-loud — see tests/test_wheel_cache_budget.py).
    "pypdf==6.11.0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "markdown==3.10.2",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "pytest-subprocess>=1.5",
    "black>=24.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: end-to-end tests that spawn real subprocesses (default: skip in CI quick)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
